--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.19",
+    "@heroicons/vue": "^2.1.3",
     "primevue": "^3.52.0",
     "vue": "^3.4.21"
   },
